# marxists.org-rag-db

./: .cz.toml  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  200GB_SOLUTION_SUMMARY.md  AI-AGENT-INSTRUCTIONS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_ENTERPRISE.md  CLOUD-ARCHITECTURE-PLAN.md  CONTRIBUTING.md  DELIVERY-MANIFEST.md  DOCUMENTATION-INDEX.md  DOCUMENTATION_CONSISTENCY.md  INSTANCE-BOUNDARIES.md  INSTANCE1-STORAGE.md  INSTANCE2-EMBEDDINGS.md  INSTANCE3-WEAVIATE.md  INSTANCE4-API.md  INSTANCE5-MCP.md  INSTANCE6-MONITORING.md  PARALLEL-DEV-ARCHITECTURE.md  PARALLEL-DEV-QUICKSTART.md  PARALLEL-TEST-STRATEGY.md  PROJECT-CREDITS.md  PROJECT_STATUS.md  README.md  RUNPOD_EMBEDDINGS.md  START_HERE.md  STORAGE-STRATEGY.md  TERRAFORM-INFRASTRUCTURE.md  docker-compose.yml  mia_processor.py  package.json  pyproject.toml  pytest.ini  pytest.ini.deprecated  query_example.py  (+2 more)
.claude/: instance-assignments.json  settings.json
.claude/agents/: corpus-investigator.md
.claude/skills/corpus-investigation/: QUICK-REFERENCE.md  README.md  reference.md
.githooks/: commit-msg  pre-commit
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PARALLEL-REFACTORING-STRATEGY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  integration_failure.md
.github/issues/: delete-deprecated-root-documentation.md  refactor-check-boundaries-specification-pattern.md  refactor-check-conflicts-chain-of-responsibility.md  refactor-check-interfaces-visitor-pattern.md  refactor-glossary-entity-linker.md  refactor-instance-map-command-pattern.md  refactor-instance-recovery-template-method.md  refactor-metadata-extraction-pipeline.md  refactor-metadata-unified-schema.md  refactor-section-specific-extractors.md  reorganize-specs-consistent-naming.md  update-cross-references-verify-links.md
.github/projects/: README.md  corpus-analysis.md  documentation-reorganization.md  refactoring-code-complexity.md
.github/workflows/: conflict-detection.yml  daily-integration.yml  instance-tests.yml  release.yml
docs/: CORPUS-OPTIMIZATION-IMPACT.md
docs/adr/: ADR-001-corpus-optimization.md  README.md
docs/architecture/: ARCHITECTURE.md
docs/corpus-analysis/: 00-corpus-overview.md  00-investigation-methodology-spec.md  01-archive-section-analysis.md  02-history-section-spec.md  03-subject-section-spec.md  04-glossary-section-spec.md  05-reference-section-spec.md  06-metadata-unified-schema.md  README.md  SKILL-INSTALLATION.md
docs/instances/instance1-storage/: README.md
docs/instances/instance2-embeddings/: README.md
docs/instances/instance3-weaviate/: README.md
docs/instances/instance4-api/: README.md
docs/instances/instance5-mcp/: README.md
docs/instances/instance6-monitoring/: README.md
docs/processes/: git-workflow.md
docs/rfc/: RFC-001-embedding-batch-size.md  RFC-TEMPLATE.md
planning/: PARALLEL-REFACTORING-STRATEGY.md  README.md  REFACTORING-NOTES.md  WORKFLOW-VALIDATION.md
planning/issues/: README.md  refactor-check-boundaries-specification-pattern.md  refactor-check-conflicts-chain-of-responsibility.md  refactor-check-interfaces-visitor-pattern.md  refactor-glossary-entity-linker.md  refactor-instance-map-command-pattern.md  refactor-instance-recovery-template-method.md  refactor-metadata-extraction-pipeline.md  refactor-metadata-unified-schema.md  refactor-section-specific-extractors.md  reorganize-specs-consistent-naming.md
planning/projects/: README.md  corpus-analysis.md  refactoring-code-complexity.md
scripts/: check_boundaries.py  check_conflicts.py  check_interfaces.py  check_todos.py  emergency_rollback.sh  extract_release_notes.py  generate_integration_report.py  html_structure_analyzer.py  identify_instance.py  init_project.sh  install-hooks.sh  instance_map.py  instance_recovery.py  session_end.py  session_start.py  setup_worktrees.sh  show_boundaries.py  show_status.py  update_work_log.py
scripts/domain/: __init__.py  boundaries.py  instance.py  interfaces.py  metrics.py  recovery.py
scripts/patterns/: __init__.py  ast_utils.py  boundary_specifications.py  builders.py  commands.py  instance_commands.py  recovery.py  repositories.py  specifications.py  validators.py  visitors.py
specs/: 00-ARCHITECTURE-SPEC.md  00-ARCHITECTURE.md  01_metadata_fetcher.md  02-DOCUMENT-PROCESSING-SPEC.md  02_html_processor.md  03-RAG-INGESTION-SPEC.md  03_pdf_processor.md  04-QUERY-INTERFACE-SPEC.md  05-MCP-INTEGRATION-SPEC.md  06-TESTING-VALIDATION-SPEC.md  07-chunking-strategies-spec.md  08-knowledge-graph-spec.md  INDEX.md
src/mia_rag/: __init__.py
src/mia_rag/interfaces/: __init__.py  contracts.py
tests/templates/: test_template.py
tests/unit/: test_boundary_specifications.py  test_import_validators.py  test_instance_commands.py  test_interface_visitors.py
tests/unit/instance1_storage/: test_gcs_storage.py
tests/unit/instance2_embeddings/: test_batch_processor.py
tests/unit/instance3_weaviate/: test_weaviate_client.py
tests/unit/instance4_api/: test_api_server.py
tests/unit/instance5_mcp/: test_mcp_server.py
tests/unit/instance6_monitoring/: test_monitoring_stack.py
tests/unit/scripts/: test_recovery_strategies.py
