[tool.poetry]
name = "marxist-rag"
version = "0.1.0"
description = "RAG system for the Marxists Internet Archive - translating revolutionary theory into the age of AI"
authors = ["Persephone Raskova <103053862+percy-raskova@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://marxism.app"
repository = "https://github.com/percy-raskova/marxists.org-rag-db"
documentation = "https://github.com/percy-raskova/marxists.org-rag-db/tree/main/docs"
keywords = ["rag", "marxism", "embeddings", "ai", "revolutionary-theory", "vector-database"]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [
    { include = "mia_rag", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# Core dependencies (all instances need these)
pydantic = "^2.5.0"
structlog = "^24.1.0"
python-dotenv = "^1.0.0"
typing-extensions = "^4.9.0"
tenacity = "^8.2.3"
click = "^8.1.7"

# Instance 1: Storage & Pipeline
google-cloud-storage = { version = "^2.14.0", optional = true }
google-cloud-scheduler = { version = "^2.13.0", optional = true }
pyarrow = { version = "^14.0.0", optional = true }
pandas = { version = "^2.1.0", optional = true }

# Instance 2: Embeddings
runpod = { version = "^1.5.0", optional = true }
sentence-transformers = { version = "^2.3.0", optional = true }
torch = { version = "^2.1.0", optional = true }
transformers = { version = "^4.36.0", optional = true }
accelerate = { version = "^0.25.0", optional = true }
datasets = { version = "^2.16.0", optional = true }

# Instance 3: Weaviate
weaviate-client = { version = "^4.4.0", optional = true }
kubernetes = { version = "^29.0.0", optional = true }

# Instance 4: API
fastapi = { version = "^0.109.0", optional = true }
uvicorn = { version = "^0.27.0", extras = ["standard"], optional = true }
redis = { version = "^5.0.0", optional = true }
httpx = { version = "^0.26.0", optional = true }
pydantic-settings = { version = "^2.1.0", optional = true }

# Instance 5: MCP
mcp = { version = "^0.9.1", optional = true }
jsonrpc-base = { version = "^2.2.0", optional = true }

# Instance 6: Monitoring
prometheus-client = { version = "^0.19.0", optional = true }
grafana-api = { version = "^1.0.3", optional = true }
psutil = { version = "^5.9.0", optional = true }

# Processing dependencies (from original implementation)
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
markdownify = "^0.11.6"
pymupdf4llm = "^0.0.10"
lxml = "^5.3.0"
pyyaml = "^6.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
hypothesis = "^6.98.0"
pytest-timeout = "^2.2.0"
pytest-benchmark = "^4.0.0"

# Linting & Formatting
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
black = "^24.1.0"  # For comparison/migration

# Type stubs
types-redis = "^4.6.0"
types-requests = "^2.31.0"
types-pyyaml = "^6.0.0"
types-tqdm = "^4.66.0"

# Documentation
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

# Development tools
ipython = "^8.20.0"
ipdb = "^0.13.13"
rich = "^13.7.0"
httpie = "^3.2.0"

# Security
bandit = "^1.7.0"
safety = "^3.0.0"
pytest-html = "^4.1.1"

[tool.poetry.extras]
# Individual instance extras
instance1 = ["google-cloud-storage", "google-cloud-scheduler", "pyarrow", "pandas"]
instance2 = ["runpod", "sentence-transformers", "torch", "transformers", "accelerate", "datasets", "pyarrow"]
instance3 = ["weaviate-client", "kubernetes"]
instance4 = ["fastapi", "uvicorn", "redis", "httpx", "pydantic-settings"]
instance5 = ["mcp", "jsonrpc-base"]
instance6 = ["prometheus-client", "grafana-api", "psutil"]

# Grouped extras
storage = ["google-cloud-storage", "google-cloud-scheduler", "pyarrow", "pandas"]
embeddings = ["runpod", "sentence-transformers", "torch", "transformers", "accelerate", "datasets"]
weaviate = ["weaviate-client", "kubernetes"]
api = ["fastapi", "uvicorn", "redis", "httpx", "pydantic-settings"]
mcp = ["mcp", "jsonrpc-base"]
monitoring = ["prometheus-client", "grafana-api", "psutil"]

# All extras for integration testing
all = [
    "google-cloud-storage", "google-cloud-scheduler", "pyarrow", "pandas",
    "runpod", "sentence-transformers", "torch", "transformers", "accelerate", "datasets",
    "weaviate-client", "kubernetes",
    "fastapi", "uvicorn", "redis", "httpx", "pydantic-settings",
    "mcp", "jsonrpc-base",
    "prometheus-client", "grafana-api", "psutil"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ===== Tool Configurations =====

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "scripts"]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
    "node_modules",
    ".terraform",
    "work-logs",
]

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
    "TRY",    # tryceratops (exception handling)
    "FLY",    # flynt (string formatting)
    "PERF",   # performance anti-patterns
    "LOG",    # logging format
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments (AI agents may generate these)
    "B008",   # Function call in argument defaults (common in FastAPI)
    "TRY003", # Long exception messages (we want detailed errors)
    "PLR2004", # Magic values (common in tests)
]

# Per-file ignores with detailed explanations
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",      # Unused function arguments acceptable in test fixtures
    "PLR2004",  # Magic value comparisons expected in test assertions
    "S101",     # Assert statements are the standard for pytest
    "ERA001",   # Commented code in tests serves as implementation templates
    "PERF401",  # List comprehensions not required for test readability
]
"__init__.py" = [
    "F401",     # Unused imports acceptable for __init__ re-exports
    "F403",     # Star imports acceptable for public API exposure
]
"scripts/*.py" = [
    "T201",     # print() statements expected in CLI scripts
    "PTH123",   # open() acceptable for simple script file ops
    "TRY300",   # else blocks on try not required for simple scripts
    "PERF401",  # List comprehensions not required for script readability
    "PERF203",  # try-except in loops acceptable for scripts
    "ARG001",   # Unused args acceptable in CLI callback signatures
]
"*.py" = [
    "PLR1722",  # sys.exit vs exit - both acceptable at module level
    "PTH123",   # open() acceptable for compatibility
    "TRY300",   # else blocks on try not always clearer
    "PERF203",  # try-except in loops sometimes necessary
]
"rag_ingest.py" = [
    "E731",     # Lambda for optional tqdm mock is intentional
    "ARG005",   # Lambda kwargs absorb tqdm arguments when disabled
]
"scripts/check_conflicts.py" = [
    "PLR0912",  # TODO: Refactor with Chain of Responsibility pattern (17 branches → ≤12)
]

[tool.ruff.lint.isort]
known-first-party = ["mia_rag"]
force-single-line = false
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
pretty = true
show_error_codes = true
show_error_context = true
show_traceback = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = false
strict = false

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "sentence_transformers.*",
    "runpod.*",
    "mcp.*",
    "grafana_api.*",
    "pymupdf4llm.*",
    "markdownify.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Command line options (always applied)
addopts = [
    "-ra",                          # Show all test outcomes
    "--strict-markers",             # Undefined markers are errors
    "--strict-config",              # Invalid config is an error
    "--tb=short",                   # Shorter tracebacks
    "--maxfail=5",                  # Stop after 5 failures
    "-vv",                          # Very verbose output
    "--color=yes",                  # Colored output
    "--cov=src/mia_rag",           # Measure coverage for src
    "--cov-branch",                 # Branch coverage
    "--cov-report=term-missing",   # Show missing lines
    "--cov-report=html",           # Generate HTML report
    "--cov-report=xml",            # Generate XML for CI
    "--cov-fail-under=80",         # Fail if coverage < 80%
    "--durations=10",              # Show 10 slowest tests
    "--timeout=300",               # 5-minute timeout per test
    "--junit-xml=test-results.xml", # JUnit format for CI
    "--html=test-report.html",     # HTML report
    "--self-contained-html",       # Single HTML file
]

# Test markers for organization
markers = [
    "instance1: Storage & Pipeline tests (Instance 1)",
    "instance2: Embeddings tests (Instance 2)",
    "instance3: Weaviate Vector DB tests (Instance 3)",
    "instance4: Query & API tests (Instance 4)",
    "instance5: MCP Integration tests (Instance 5)",
    "instance6: Monitoring & Testing tests (Instance 6)",
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (cross-module)",
    "contract: Contract tests (interface validation)",
    "scale: Scale tests (slow, requires resources)",
    "e2e: End-to-end tests (full pipeline)",
    "slow: Slow running tests (>5 seconds)",
    "ai_generated: Test generated by AI (needs review)",
    "requires_gpu: Test requires GPU resources",
    "requires_gcp: Test requires GCP credentials",
    "requires_runpod: Test requires Runpod API",
    "requires_weaviate: Test requires Weaviate instance",
    "requires_redis: Test requires Redis instance",
    "wip: Work in progress (skip in CI)",
    "flaky: Known flaky test (retry automatically)",
    "critical: Critical test (must pass)",
    "benchmark: Performance benchmark test",
]

# Asyncio configuration
asyncio_mode = "auto"

# Timeout configuration
timeout = 300                # Default 5-minute timeout
timeout_method = "thread"    # Use thread-based timeout

# Strict mode
xfail_strict = true          # XFAIL tests must actually fail

# Logging
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] [%(name)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "tests/test.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] [%(name)s] %(filename)s:%(lineno)d - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# Console output
console_output_style = "progress"

# Ignore patterns
norecursedirs = [
    ".git", ".venv", "venv", "__pycache__", "*.egg-info",
    ".pytest_cache", ".mypy_cache", ".ruff_cache", "htmlcov",
    "node_modules", ".terraform", "work-logs", "build", "dist"
]

# Warning filters
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
    "error::UserWarning:mia_rag.*",  # Treat our warnings as errors
]

[tool.coverage.run]
source = ["src/mia_rag"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2
show_missing = true

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection for now

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true  # Allow 0.x.x versions
annotated_tag = true
bump_message = "bump: version $current_version → $new_version\n\nAutomated version bump by commitizen"
version_files = [
    "pyproject.toml:^version",
    "src/mia_rag/__init__.py:^__version__"
]
changelog_file = "CHANGELOG.md"
changelog_incremental = true
changelog_start_rev = "v0.1.0"
